# ms-proj

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deps-of-deps.md  dockercleanup.sh  pyproject.toml  setup-deps.sh
.devcontainer/: devcontainer.json
deliverables/: nsp_data_demo_jwb.ipynb
demos/: (Public)_BWM_analysis_2023.ipynb  Cosyne_2023_IBL_NWB_tutorial.ipynb  IBL.ipynb  IBL_ONE_tutorial.ipynb  nsp_data_demo_jwb.ipynb  one_handler.py
papers/: ibl_links.md
presentation/: attributions.md
proposal/: proposal.bib  proposal.tex
replication/: replication.ipynb
replication/cc/: cc.py
replication/gu/: utils.py
replication/te/: te.py
report/: report.tex
review/: review.bib  review.tex
sortrep/: README.md  one_handler.py  quick_reference.py
