# This file is adapted from similar files used in my prior academic and industry work. Those files and this file may have been developed with the help of LLM's like ChatGPT

[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "jwb-byu-ms-proj"
description = "Wesley Borden Masters Project"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate",
    "aiohttp",
    "boto3",
    "click",
    "colorcet",
    "colorlog",
    "cython",
    "dandi",
    "dask",
    "datasets",
    "easyqc",
    "einops",
    "faiss-cpu",
    "figrid",
    "globus-sdk",
    "graphviz",
    "h5py",
    "hdbscan",
    "imagecodecs",
    "ipykernel",
    "ipython",
    "ipywebrtc",
    "joblib",
    "jupyter",
    "jupyterlab",
    "k3d",
    "matplotlib",
    "mkdocs",
    "nbformat",
    "nptdms",
    "numba",
    "numpy",
    "opencv-python",
    "opencv-python-headless",
    "pandas",
    "pillow",
    "plotly",
    "psutil",
    "pyarrow",
    "pyfftw",
    "PyQt5",
    "PyQtWebEngine",
    "pyopengl",
    "pyqt-darktheme",
    "pyqtgraph",
    "pynrrd",
    "pynwb",
    "pyyaml",
    "qtconsole",
    "qtpy",
    "quantities",
    "ray",
    "requests",
    "responses",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "sparse",
    "statsmodels",
    "svgutils",
    "tabulate",
    "threadpoolctl",
    "timm",
    "toolz",
    "torch",
    "torcheval",
    "torchvision",
    "tqdm",
    "traitlets",
    "transformers",
    "trimesh",
    "vedo",
    "vtk",
    "zarr"
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7",
    "pytest>=8.3",
    "mypy>=1.15",
    "ruff>=0.10"
]

[tool.mypy]
python_version = "3.13"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
